--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
     display: flex;
     align-items: center;
     background-color: #1976d2;
-    color: orange;
+    color: red;
     font-weight: 600;
   }
 
